# my_cudabevfusion

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.cpp  setup.py
bevfusion/api/: bevfusion.h
bevfusion/common/: bevfusion_params.cpp  bevfusion_params.h  image_preprocess.cpp  image_preprocess.h
bevfusion/modules/: README.md
bevfusion/modules/image_preprocess/: CMakeLists.txt  image_preprocess.cpp  image_preprocess.cu  interpolate.py  nearest_neighbor_interpolate.cpp  nearest_neighbor_interpolate.py  nn_interpol_base.cpp  nn_interpol_base.h
bevfusion/modules/image_preprocess/examples/: gtest.cpp  image_preprocess.cu  nearest_neighbor_interpolate.cpp  nearest_neighbor_interpolate.cu  nearest_neighbor_interpolate.py
bevfusion/modules/image_preprocess/unit_tests/: CMakeLists.txt  nn_interpol_base_test.cpp
bevfusion/modules/image_preprocess/unit_tests/data/: cpp_read_bin.cpp  python_write_bin.py
bevfusion/modules/image_preprocess/unit_tests/unit_tests_python/: bilinear_interpolation.py
bevfusion/modules/lift_splat_shoot/python_implementation/: bev_pool.py  unit_test.py
